use application options

--- a/DownloadManager/DownloadManager/appsettings.json
+++ b/DownloadManager/DownloadManager/appsettings.json
@@ -11,5 +11,10 @@
         "Default": "Warning"
       }
     }
-  }
+  },
+
+  "Downloading": {
+    "DefaultThreadsPerDownload": 1,
+    "DefaultThreasholdPerSecond": 0 
+  } 
 }
