--- a/DownloadManager/DownloadManager/DownloadManager.csproj
+++ b/DownloadManager/DownloadManager/DownloadManager.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Lib.AspNetCore.ServerSentEvents" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0-preview2-final" />
     <PackageReference Include="SystemWrapper.Interfaces" Version="0.22.0.141" />
     <PackageReference Include="SystemWrapper.Wrappers" Version="0.22.0.141" />
